since version 2.0.1
===================
* make sure ftime cannot be None (to avoid crash in grib_list).

version 2.0.1 (git tag v2.0.1rel)
================================
* Fix for test failure on python 3.5 (issue #24).
* improvements to setup.py, including making it more windows-friendly.
  Added windows support in setup.cfg, should now be possible to build on 
  windows if grib_api is built with MSVS (see
  https://software.ecmwf.int/wiki/pages/viewpage.action?pageId=48109524). 
  Pull request #18.
* make has_key gribmessage method more robust (it was returning False in
  cases when a key actually did exist - issue #9).

version 2.0.0 (git tag v2.0.0rel)
=================================
* migrate to Github (https://github.com/jswhit/pygrib).
* make sure is_missing(key) method of grib message doesn't fail when
  key is analDate or validDate.
* fix grib_list so it handles analDate and validDate keys properly.
* update ncep g2clib to version 1.5.0.
* change download_url in setup.py to point to pypi instead of googlecode.
* silence warnings ("Non-trivial type declarators in shared declaration (e.g.
  mix of pointers and values). Each pointer declaration should be on its own
  line") with Cython 0.2.

version 1.9.9 (svn tag v1.9.9rel)
================================
* analDate and validDate are now searchable with pygrib.open.select.
* expand_grid(False) now suppresses expansion of lats, lons returned from
  latlons method, as well as data (issue 84)..

version 1.9.8 (svn tag v1.9.8rel)
=================================
* to be consistent with what the grib_api lib does, don't flip data grids
  when jScansPositively=0 or iScansNegatively=1 (issue 77).
* fix segfaulting in ncepgrib2.py when interpolating from reduced to regular
  grids.
* raise exception in redtoreg.pyx if number of points on reduced grid
  does not equal number of data values (to prevent segfault).
* add -m option to grib_list (same as -s, but also print min/max of data).